@@ -9,8 +9,11 @@ apport (0.41) UNRELEASED; urgency=low
   * gtk/apport-gtk: Only offer to restart programs that are in the $PATH. E.
     g. /usr/lib/firefox/firefox-bin cannot be called directly. 
     Closes: LP#79623
+  * apport/report.py: Disassemble 16 instructions instead of 32 bytes to
+    become independent of the instruction size. Thanks to Kees Cook for the
+    patch!
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 21 Jan 2007 13:15:44 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 21 Jan 2007 17:04:59 +0100
 
 apport (0.40) feisty; urgency=low
 
